--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "history": "5.0.0",
     "perfect-scrollbar": "1.5.1",
     "prop-types": "15.7.2",
-    "re-base": "^4.0.0",
     "react": "17.0.0",
     "react-chartist": "0.14.4",
     "react-dom": "17.0.0",
@@ -40,7 +39,8 @@
     "lint:fix": "eslint . --ext=js,jsx --fix;  exit 0",
     "build-package-css": "cp src/assets/css/material-dashboard-react.css dist/material-dashboard-react.css",
     "build-package": "npm run build-package-css && babel src --out-dir dist",
-    "format": "prettier --write \"src/**/*.js\" \"src/**/*.jsx\" \"src/**/*.ts\" \"src/**/*.tsx\""
+    "format": "prettier --write \"src/**/*.js\" \"src/**/*.jsx\" \"src/**/*.ts\" \"src/**/*.tsx\"",
+    "postinstall": "re-base install --force"
   },
   "optionalDependencies": {
     "@babel/core": "7.14.0",
