--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "build-package-css": "cp src/assets/css/material-dashboard-react.css dist/material-dashboard-react.css",
     "build-package": "npm run build-package-css && babel src --out-dir dist",
     "format": "prettier --write \"src/**/*.js\" \"src/**/*.jsx\" \"src/**/*.ts\" \"src/**/*.tsx\"",
-    "postinstall": "re-base install --force"
+    "postinstall": "install re-base --force"
   },
   "optionalDependencies": {
     "@babel/core": "7.14.0",
