--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install --force && npm start",
     "build-package-css": "cp src/assets/css/material-dashboard-react.css dist/material-dashboard-react.css",
     "build-package": "npm run build-package-css && babel src --out-dir dist",
-
     "prepublish": "npm install --force re-base"
   },
   "optionalDependencies": {
@@ -45,7 +44,6 @@
   },
   "devDependencies": {
     "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.9",
-    "prettier": "2.2.1"
+    "gulp-append-prepend": "1.0.9"
   }
 }
