--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install --force && npm start",
     "build-package-css": "cp src/assets/css/material-dashboard-react.css dist/material-dashboard-react.css",
     "build-package": "npm run build-package-css && babel src --out-dir dist",
-    "prepublish": "npm install --force re-base"
+    "prepublish": "npm install --force re-base",
+    "heroku-postbuild": "npm run build"
   },
   "optionalDependencies": {
     "@babel/core": "7.14.0",
