--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert2": "^11.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "express": "^4.17.2"
   },
 
 
