--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 
 
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
