--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "node": "14.15.4"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
+    "express": "^4.17.2",
     "firebase": "^7.1.2",
     "gapi-client": "^0.0.3",
     "googleapis": "^89.0.0",
@@ -24,11 +26,8 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert2": "^11.3.0",
-    "uuid": "^8.3.2",
-    "express": "^4.17.2"
+    "uuid": "^8.3.2"
   },
-
-
   "scripts": {
     "start": "node server.js",
     "build": "react-scripts build",
