--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@emailjs/browser": "^3.4.0",
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "babel-plugin-dotenv-import": "^2.2.0",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
-    "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "firebase": "^7.1.2",
     "gapi-client": "^0.0.3",
