--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "15.7.2",
     "react": "17.0.0",
     "react-chartist": "0.14.4",
+    "react-hook-form": "^7.34.2",
     "react-dom": "17.0.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
